5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1822_1644.log
== TEST (2019-06-13 11:07:12) 
-- CODE:
from numpy import*
a = array(eval(input("entrada:")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:30) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in a : 
	if(i<= 5):
		j+=j
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:47) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n 
	if(i<= 5):
		j+=j
		print(j)
-- ERROR:
File "XXXX", line 4
    for x in n 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:57) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(i<= 5):
		j+=j
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:21) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j+=j
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:38) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j+=j
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:59) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:10) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:12:16) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)
-- EXECUTION TIME:
0.872524
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
6
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:16) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:27) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
	print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:43) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = (t,dtype=int)
for u in n:
	if(u<=50):
		b = b + 1
		t[c]=n[u]
print(t)
-- ERROR:
File "XXXX", line 11
    t = (t,dtype=int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:51) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(t, dtype=int)
for u in n:
	if(u<=50):
		b = b + 1
		t[c]=n[u]
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:22) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=50):
		b = b + 1
		t[c]=n[u]
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:29) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		t[c]=n[u]
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:19:32) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		t[c]=n[u]
print(t)
-- EXECUTION TIME:
1.02264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1644/main.py", line 15, in <module>
    t[c]=n[u]
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:54) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		t[c]=n[u]
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:17) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:41) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u>=5):
		b = b + 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:57) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u>=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:20) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j>=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u>=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:20) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j>=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u>=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:32) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j>=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u>=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:00) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:11) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:55) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for u in n:
	if(u<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		t[c] = n[i]
	print(t)
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:37) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		t[c] = n[i]
	print(t)
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:33) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:45) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:06) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
	j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 6
    j= 1+j
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:14) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
			print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
File "XXXX", line 7
    print(j)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:23) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<=5):
		j= 1+j
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:51) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(n<=5):
		n= 1+n
		print(n)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:46) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:00) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:36:16) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:36:29) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:36:57) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:08) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:08) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:13) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:35) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in j :
	if(j<5):
		j= 1+j
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:05) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:24) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:33) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:49) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:49) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:49) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:50) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:29) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
		print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:34) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
	print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:52) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
	if(j<5):
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:53) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)
		if(j<5):
		print(j)


b = 0
c = 0
t = zeros(b, dtype=int)
for i in n:
	if(i<=5):
		b = b + 1
		c = c + 1
		
	print(t)
-- ERROR:
File "XXXX", line 8
    if(j<5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:37) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

b = 0
c = 0
t = zeros(b, dtype=int)
	for i in n:
		if(i<=5):
			b = b + 1
			c = c + 1
		
		print(t)
-- ERROR:
File "XXXX", line 12
    for i in n:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:59) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(b, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:59) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(b, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:00) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(b, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:01) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(b, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:29) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(j, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:29) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(j, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:49) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(j, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:56) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

x= 0
g= 0
t = zeros(j, dtype=int)
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:51:31) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:05) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(i<=5):
		t[x] = n[g]
		x = x + 1
		g = g+ 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:30) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

k = zeros(j, dtype=int)
x = 0
l = 0
for u in range(size(n)):
	if(i<=5):
		t[k] = n[l]
		x = x + 1
		l = l + 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:42) 
-- CODE:
from numpy import*
n= array(eval(input("entrada:")))
j= 0
for x in n:
	if(j<5):
		j = j + 1
print(j)

k = zeros(j, dtype=int)
x = 0
l = 0
for u in range(size(n)):
	if(i<=5):
		t[k] = n[l]
		x = x + 1
		l = l + 1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
